[metadata]
name = astropy-tutorials
author = The Astropy Developers
author_email = astropy.team@gmail.com
description = Tutorials for the Astropy Project
long_description = file: README.rst
license = BSD
license_file = LICENSE
url = http://learn.astropy.org/
edit_on_github = False
github_project = astropy/tutorials
python_requires = ">=3.7"